[package]
name = "graphene"
version = "0.0.1"
description = "A pure-rust abstraction over the various graphics libraries"
authors = ["Folling <coding@folling.com>"]
repository = "https://github.com/folling/graphene"
licence = "BSD-3-Clause"
license-file = "LICENCE.txt"
keywords = [
    "graphics",
    "gui",
    "opengl",
    "rendering"
]
categories = [
    "api-bindings",
    "graphics",
    "gui",
    "rendering",
    "rendering::graphics-api"
]
readme = "README.md"
edition = "2021"

[features]
default = ["all"]
all = ["opengl"]
opengl = ["gl"]

[dependencies]
# The GL crate takes away a lot of effort. OpenGL functions can't just be linked to or have a binding written for them. They
# must be loaded at runtime instead using glXGetProcAddress(ARB)/wglGetProcAddress/eglGetProcAddress
# The functions themselves need to be provided by name, which requires some kind of generation from the specs.
# This is technically possible using something like glut, but it's an effort that can be avoided by simply using this crate.
# It has a minimal amount of dependencies. Most of them are just indirections over its own featureset.
# The only "real" dependencies are: xml-rs, which is itself dependency-less and a very common dependency and log, which we considered trivial.
gl = { version = "0.14.0", optional = true }
thiserror = "1.0.30"
strum = "0.23.0"
strum_macros = "0.23"
